FreeST/test/Programs/InvalidTests/Typing/multiVarTypeSigAmbig/multiVarTypeSigAmbig.fst
x, y, x : Int 
x = 1
y = 2

main : Int
main = x + y